(fix) [Mobile] Disabled bottom Button has wrong color
Page 182
test: 182-three-bottom-buttons

--- a/tau/src/css/profile/mobile/changeable/common/footer.less
+++ b/tau/src/css/profile/mobile/changeable/common/footer.less
@@ -30,5 +30,8 @@
 		&:active:not(.ui-btn-circle):not(.ui-btn-nobg):not(.ui-floatingactions-item) {
 			background-color: @color_button_bottom_bg_press;
 		}
+		&.ui-state-disabled {
+			background-color: @color_button_disabled_in_fotter;
+		}
 	}
 }
